--- a/JSQMessagesViewController/Views/JSQMessagesCollectionViewCellOutgoing.xib
+++ b/JSQMessagesViewController/Views/JSQMessagesCollectionViewCellOutgoing.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -79,6 +79,23 @@
                             <constraint firstAttribute="trailing" secondItem="y9b-D9-Q7q" secondAttribute="trailing" id="w9X-3u-BN1"/>
                         </constraints>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X89-B1-aAf" userLabel="Select container">
+                        <rect key="frame" x="0.0" y="60" width="26" height="26"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y9b-D9-Q7X" userLabel="Select Image View">
+                                <rect key="frame" x="0.0" y="0.0" width="26" height="26"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.3333333432674408" green="0.3333333432674408" blue="0.3333333432674408" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="y9b-D9-Q7X" secondAttribute="bottom" id="7SX-4t-GAs"/>
+                            <constraint firstAttribute="width" constant="26" id="Pkm-tW-k4x"/>
+                            <constraint firstItem="y9b-D9-Q7X" firstAttribute="leading" secondItem="X89-B1-aAf" secondAttribute="leading" id="Pya-tL-Fjr"/>
+                            <constraint firstItem="y9b-D9-Q7X" firstAttribute="top" secondItem="X89-B1-aAf" secondAttribute="top" id="e5w-hn-mrg"/>
+                            <constraint firstAttribute="height" constant="26" id="tgw-aN-JJx"/>
+                            <constraint firstAttribute="trailing" secondItem="y9b-D9-Q7X" secondAttribute="trailing" id="w9X-3u-BNw"/>
+                        </constraints>
+                    </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X89-B1-aAd" userLabel="Avatar container">
                         <rect key="frame" x="275" y="100" width="34" height="34"/>
                         <subviews>
@@ -122,10 +139,12 @@
                 <constraint firstAttribute="trailing" secondItem="7Uc-dI-YDD" secondAttribute="trailing" id="1v4-5s-XmK"/>
                 <constraint firstItem="2zh-vR-QJW" firstAttribute="top" secondItem="p52-YN-yLu" secondAttribute="bottom" id="3Wx-g0-fTc"/>
                 <constraint firstAttribute="trailing" secondItem="jxM-YD-sVG" secondAttribute="trailing" id="AwY-g7-f1T"/>
+                <constraint firstItem="X89-B1-aAf" firstAttribute="centerY" secondItem="23f-xH-rkY" secondAttribute="centerY" id="GzT-KI-zIV"/>
                 <constraint firstItem="jxM-YD-sVG" firstAttribute="top" secondItem="23f-xH-rkY" secondAttribute="top" id="HYT-Tw-whz"/>
                 <constraint firstAttribute="trailing" secondItem="X89-B1-aAd" secondAttribute="trailing" id="KLt-Ix-wDa"/>
                 <constraint firstItem="X89-B1-aAe" firstAttribute="bottom" secondItem="X89-B1-aAd" secondAttribute="bottom" id="M1q-Zn-mLx"/>
                 <constraint firstItem="7Uc-dI-YDD" firstAttribute="top" secondItem="2zh-vR-QJW" secondAttribute="bottom" id="Ngq-ew-t2K"/>
+                <constraint firstItem="X89-B1-aAf" firstAttribute="leading" secondItem="23f-xH-rkY" secondAttribute="leading" id="Xx4-i9-TTc"/>
                 <constraint firstItem="2zh-vR-QJW" firstAttribute="trailing" secondItem="X89-B1-aAe" secondAttribute="leading" id="YtB-gz-hbm"/>
                 <constraint firstItem="7Uc-dI-YDD" firstAttribute="leading" secondItem="23f-xH-rkY" secondAttribute="leading" id="fiS-g3-X16"/>
                 <constraint firstAttribute="bottom" secondItem="7Uc-dI-YDD" secondAttribute="bottom" id="gXo-9b-b1W"/>
@@ -141,6 +160,10 @@
             <size key="customSize" width="306" height="245"/>
             <connections>
                 <outlet property="accessoryButton" destination="BbA-sv-fxi" id="e72-MA-jvZ"/>
+                <outlet property="selectContainerView" destination="X89-B1-aAf" id="WSI-Zc-qIy"/>
+                <outlet property="selectContainerViewHeightConstraint" destination="tgw-aN-JJx" id="pgV-tY-5Cy"/>
+                <outlet property="selectContainerViewWidthConstraint" destination="Pkm-tW-k4x" id="Cpe-d3-yiy"/>
+                <outlet property="selectImageView" destination="y9b-D9-Q7X" id="cZo-SR-S9y"/>
                 <outlet property="avatarContainerView" destination="X89-B1-aAd" id="WSI-Zc-qIE"/>
                 <outlet property="avatarContainerViewHeightConstraint" destination="tgw-aN-JJu" id="pgV-tY-5Cm"/>
                 <outlet property="avatarContainerViewWidthConstraint" destination="Pkm-tW-k4z" id="Cpe-d3-yiq"/>
@@ -154,6 +177,9 @@
                 <outlet property="messageBubbleImageView" destination="2qm-c6-OZf" id="bpy-Gv-jSh"/>
                 <outlet property="messageBubbleTopLabel" destination="p52-YN-yLu" id="SLH-sA-Chu"/>
                 <outlet property="messageBubbleTopLabelHeightConstraint" destination="8TB-va-f8L" id="FNt-BS-Wxi"/>
+                <outlet property="selectContainerView" destination="X89-B1-aAf" id="WSI-Zc-qIx"/>
+                <outlet property="selectContainerViewHeightConstraint" destination="tgw-aN-JJx" id="pgV-tY-5Cx"/>
+                <outlet property="selectContainerViewWidthConstraint" destination="Pkm-tW-k4x" id="Cpe-d3-yix"/>
                 <outlet property="statusContainerView" destination="X89-B1-aAe" id="WSI-Zc-qId"/>
                 <outlet property="statusImageView" destination="y9b-D9-Q7q" id="cZo-SR-S9j"/>
                 <outlet property="textView" destination="vLY-aM-0Dr" id="YEp-mW-xIY"/>
