--- a/JSQMessagesViewController/Views/JSQMessagesCollectionViewCellOutgoing.xib
+++ b/JSQMessagesViewController/Views/JSQMessagesCollectionViewCellOutgoing.xib
@@ -144,7 +144,7 @@
                 <constraint firstAttribute="trailing" secondItem="X89-B1-aAd" secondAttribute="trailing" id="KLt-Ix-wDa"/>
                 <constraint firstItem="X89-B1-aAe" firstAttribute="bottom" secondItem="X89-B1-aAd" secondAttribute="bottom" id="M1q-Zn-mLx"/>
                 <constraint firstItem="7Uc-dI-YDD" firstAttribute="top" secondItem="2zh-vR-QJW" secondAttribute="bottom" id="Ngq-ew-t2K"/>
-                <constraint firstItem="X89-B1-aAf" firstAttribute="leading" secondItem="23f-xH-rkY" secondAttribute="leading" id="Xx4-i9-TTc"/>
+                <constraint firstItem="X89-B1-aAf" firstAttribute="leading" secondItem="23f-xH-rkY" secondAttribute="leading" constant="8" id="Xx4-i9-TTc"/>
                 <constraint firstItem="2zh-vR-QJW" firstAttribute="trailing" secondItem="X89-B1-aAe" secondAttribute="leading" id="YtB-gz-hbm"/>
                 <constraint firstItem="7Uc-dI-YDD" firstAttribute="leading" secondItem="23f-xH-rkY" secondAttribute="leading" id="fiS-g3-X16"/>
                 <constraint firstAttribute="bottom" secondItem="7Uc-dI-YDD" secondAttribute="bottom" id="gXo-9b-b1W"/>
